# H5Support

./: .clang-format  .gitignore  CMakeLists.txt  H5SupportFunctions.cmake  LICENSE.txt  README.md
Resources/CMake/: H5Support.h.in  H5SupportConfig.cmake.in  H5SupportTestMain.cpp.in  PackageProject.cmake  TargetCopyInstall.cmake  TestFileLocations.h.in  Version.cpp.in  Version.h.in
Source/H5Support/: H5Lite.h  H5ScopedErrorHandler.h  H5ScopedSentinel.h  H5Support.h  H5SupportTypeDefs.h  H5SupportVersion.h  H5Utilities.h  QH5Lite.cpp  QH5Lite.h  QH5Utilities.cpp  QH5Utilities.h
Test/: BigHDF5DatasetTest.cpp  CMakeLists.txt  H5LiteTest.cpp  H5SupportTestHelper.h  H5UtilitiesTest.cpp  UnitTestSupport.h
cmake/: H5SupportConfig.cmake
